--- a/views/construction_view.xml
+++ b/views/construction_view.xml
@@ -28,7 +28,7 @@
     <field name="arch" type="xml">
       <form>
         <sheet>
-                  <!-- Header -->
+                  <!-- Header calling to --> 
           <header>
             <field name="state" widget="statusbar" options="{'clickable':'1'}"/>
           </header>
