--- a/views/construction_orders.xml
+++ b/views/construction_orders.xml
@@ -31,6 +31,7 @@
                         <!-- Two Child Group -->
                         <group>
                             <field name="vendor"/>
+                            <field name="for_site"/>
                         </group>
                         <group>
                             <field name="expected_delivery"/>
